# book-to-audiobook

./: .gitignore  =0.11.0  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt  start.sh  stop.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: codeql.yml  security.yml
app/: main.py
app/routes/: chapters.py  convert.py  download.py  settings.py  tts.py  upload.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  chapters.html  index.html  settings.html
cli/: main.py
config/: settings.py  user_settings.py
core/: audio_builder.py  converter.py  models.py  text_processor.py
core/book_parser/: _epub_reader.py  base_parser.py  epub_parser.py  mobi_parser.py  parser_factory.py  pdf_parser.py  txt_parser.py
core/tts_provider/: audio_utils.py  baidu_tts.py  base_tts.py  cosyvoice_tts.py  edge_tts.py  elevenlabs_tts.py  iflytek_tts.py  kokoro_tts.py  qwen3_mlx_tts.py  supertonic_tts.py  tts_factory.py  voices.py  voxcpm_tts.py
utils/: ffmpeg_utils.py  log.py
