[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-to-audiobook"
version = "0.1.13"
description = "Convert ebooks (EPUB, PDF, TXT) to audiobooks (M4B/MP3) with chapter markers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "hugcosmos", email = "hugcosmos@gmail.com" }]
license = "MIT"
keywords = ["audiobook", "ebook", "tts", "text-to-speech", "m4b", "epub", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11.0",
    "pydub>=0.25.1",
    "sentencex>=0.6.0",
    "aiofiles>=24.0",
    "soundfile>=0.12.1",
    "edge-tts>=6.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
book2audio = "cli.main:cli"

[project.urls]
Homepage = "https://github.com/hugcosmos/book-to-audiobook"
Repository = "https://github.com/hugcosmos/book-to-audiobook"
Issues = "https://github.com/hugcosmos/book-to-audiobook/issues"

[tool.setuptools.packages.find]
include = ["app*", "core*", "config*", "utils*", "cli*"]

[tool.setuptools.package-data]
"app" = ["templates/**/*", "static/**/*"]
"config" = ["*.py"]
