[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.43.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-to-audiobook"
version = "0.2.0"
description = "Convert ebooks (EPUB, PDF, TXT) to audiobooks (M4B/MP3) with chapter markers"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "hugcosmos", email = "hugcosmos@gmail.com" }]
license = "MIT"
keywords = ["audiobook", "ebook", "tts", "text-to-speech", "m4b", "epub", "pdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pdfplumber>=0.11.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.0; python_version >= '3.13'",  # audioop removed in 3.13 (PEP 594)
    "sentencex>=0.6.0",
    "aiofiles>=24.0",
    "soundfile>=0.12.1",
    "edge-tts>=6.1.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "click>=8.0",
    "rich>=13.0",
    # Default local TTS engine — mirrors config/settings.py.
    # Apple Silicon → Qwen3 MLX (GPU-accelerated).
    # Intel Mac → Kokoro (kokoro-onnx, ONNX/CPU, 100 Chinese voices).
    "mlx-audio>=0.1.0; platform_machine == 'arm64'",
    "hf-transfer>=0.1.9; platform_machine == 'arm64'",
    "kokoro-onnx>=0.5.0; platform_machine != 'arm64'",
    "onnxruntime>=1.19.0; platform_machine != 'arm64'",
    "misaki>=0.9.0; platform_machine != 'arm64'",
    "pypinyin>=0.55.0; platform_machine != 'arm64'",
    "cn2an>=0.5.0; platform_machine != 'arm64'",
]

[project.scripts]
book2audio = "cli.main:cli"

[project.optional-dependencies]
# Supertonic local TTS — ONNX-based, 33 languages. Always optional: it pulls in
# onnxruntime (a heavy native dep that lacks wheels on some Python versions,
# e.g. 3.13). Install with: pip install "book-to-audiobook[supertonic]"
supertonic = [
    "supertonic>=1.3.0",
]
# CosyVoice (sherpa-onnx, ONNX/CPU, multilingual). Not installed by default.
# Install with: pip install "book-to-audiobook[cosyvoice]"
cosyvoice = [
    "sherpa-onnx>=1.10.0",
    "modelscope>=1.18.0",
    "huggingface-hub>=0.24.0",
]
# Kokoro TTS (kokoro-onnx, ONNX/CPU, 100 Chinese voices). Default on Intel
# Mac. On Apple Silicon, install with: pip install "book-to-audiobook[kokoro]"
# Excluded on Python >= 3.13 (no onnxruntime wheel for macOS x86 then).
kokoro = [
    "kokoro-onnx>=0.5.0; python_version < '3.13'",
    "onnxruntime>=1.19.0; python_version < '3.13'",
    "misaki>=0.9.0; python_version < '3.13'",
    "pypinyin>=0.55.0; python_version < '3.13'",
    "cn2an>=0.5.0; python_version < '3.13'",
]

[project.urls]
Homepage = "https://github.com/hugcosmos/book-to-audiobook"
Repository = "https://github.com/hugcosmos/book-to-audiobook"
Issues = "https://github.com/hugcosmos/book-to-audiobook/issues"

[tool.setuptools.packages.find]
include = ["app*", "core*", "config*", "utils*", "cli*"]

[tool.setuptools.package-data]
"app" = ["templates/**/*", "static/**/*"]
"config" = ["*.py"]
